--- a/MLP_imdb_sentiment.ipynb
+++ b/MLP_imdb_sentiment.ipynb
@@ -10987,15 +10987,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jyskYQFqt6cn",
-        "outputId": "1bd5ac61-2be2-48f7-d548-9399feeb9f09"
+        "outputId": "4e3e3ee3-1992-44b0-8ba6-2af1b4ee089d"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
@@ -11055,7 +11055,7 @@
       "metadata": {
         "id": "faEVXt-6wDLm"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
